unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Percent_Complete_Milestone_Pending__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Complete_Milestone_Pending__c</fullName>
    <description>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated by the revenue forecast version batch Apex job.</description>
    <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
    <label>% Complete: Milestone: Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>