unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Percent_Complete_Milestone_Recognized__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Complete_Milestone_Recognized__c</fullName>
    <description>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
    <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
    <label>% Complete: Milestone: Recognized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>