unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Percent_Complete_Milestone_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Complete_Milestone_Scheduled__c</fullName>
    <description>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
    <inlineHelpText>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
    <label>% Complete: Milestone: Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>