unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Percent_Complete_Milestone_Unscheduled__c.field-meta.xml
<CustomField>
    <fullName>pse__Percent_Complete_Milestone_Unscheduled__c</fullName>
    <description>Amount of unscheduled revenue within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
    <inlineHelpText>Amount of unscheduled revenue within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
    <label>% Complete: Milestone: Unscheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>