unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the practice this revenue forecast version detail relates to.</description>
    <inlineHelpText>Lookup to the practice this revenue forecast version detail relates to.</inlineHelpText>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
    <type>Lookup</type>
</CustomField>