unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the project this revenue forecast version detail relates to.</description>
    <inlineHelpText>Lookup to the Project this revenue forecast version relates to.</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
    <type>Lookup</type>
</CustomField>