unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Revenue_Forecast_Version__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Forecast_Version__c</fullName>
    <description>Lookup to the revenue forecast version this record relates to.</description>
    <inlineHelpText>Lookup to the revenue forecast version this record relates to.</inlineHelpText>
    <label>Revenue Forecast Version</label>
    <referenceTo>pse__Revenue_Forecast_Version__c</referenceTo>
    <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>