unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the time period this revenue forecast version detail relates to.</description>
    <inlineHelpText>Lookup to the time period set on this revenue forecast version.</inlineHelpText>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
    <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
    <type>Lookup</type>
</CustomField>