unpackaged/main/default/objects/pse__Revenue_Forecast_Version_Detail__c/fields/pse__Time_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period_Start__c</fullName>
    <description>Start date of the time period this record relates to.</description>
    <inlineHelpText>Start date of the time period this record relates to.</inlineHelpText>
    <label>Time Period Start</label>
    <type>Date</type>
</CustomField>